--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.19.8",
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.12.0",
+    "customize-cra": "^0.2.14",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.5",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
@@ -14,9 +20,9 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
